--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <br>
         <p>Es un prototipo consiste en un pequeño mecanismo que inserta un poderoso firewall vía USB y es ecológico porque mientras se utiliza se carga por lo que no se debe conectar a la luz y no se gasta energía.</p>
         <button class="principal-button"><a href="https://www.youtube.com/watch?v=3q2ENiVBAy8">Saber más</a></button>
+        <br>
+        <p>Info: En México, fueron hackeadas 300,868,532 personas en el 2019, y se prevee que en 2020 aumente esta cifra</p>
     </section>
     <section class="second" id="second">
 
